--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <img src="img/log.png" alt="" />
     <nav class="menu">
       <ul>
-        <li><a href="/">Inicio</a></li>
-        <li><a href="/novias.html">Novias</a></li>
-        <li><a href="/madrinas.html">Madrinas</a></li>
-        <li><a href="/fiesta.html">Fiesta</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
+        <li><a href="/">inicio</a></li>
+        <li><a href="/novias.html">novias</a></li>
+        <li><a href="/madrinas.html">madrinas</a></li>
+        <li><a href="/fiesta.html">fiesta</a></li>
+        <li><a href="contacto.html">contacto</a></li>
       </ul>
       <a href="https://api.whatsapp.com/send?phone=+5493516066789"><img src="/img/logos/WhatsApp_Logo_1.png"
           alt="Contactanos"></a>
