--- a/fiesta.html
+++ b/fiesta.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Novias</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -14,13 +14,13 @@
         <img src="img/log.png" alt="" />
         <nav class="menu">
             <ul>
-                <li><a href="/">inicio</a></li>
-                <li><a href="novias.html">novias</a></li>
-                <li><a href="/madrinas.html">madrinas</a></li>
-                <li><a href="fiesta.html">fiesta</a></li>
-                <li><a href="contacto.html">contacto</a></li>
+                <li><a href="./index.html">inicio</a></li>
+                <li><a href="./novias.html">novias</a></li>
+                <li><a href="./madrinas.html">madrinas</a></li>
+                <li><a href="./fiesta.html">fiesta</a></li>
+                <li><a href="./contacto.html">contacto</a></li>
             </ul>
-            <a href="https://api.whatsapp.com/send?phone=+5493516066789"><img src="/img/logos/WhatsApp_Logo_1.png"
+            <a href="https://api.whatsapp.com/send?phone=+5493516066789"><img src="./img/logos/WhatsApp_Logo_1.png"
                     alt="Contactanos"></a>
         </nav>
     </header>
@@ -36,13 +36,13 @@
                 </p>
             </div>
         </section>
-        <img src="/img/fiesta1.jpg" alt="novia1" />
-        <img src="/img/fiesta2.jpg" alt="novia2" />
-        <img src="/img/fiesta3.jpg" alt="novia3" />
+        <img src="./img/fiesta1.jpg" alt="novia1" />
+        <img src="./img/fiesta2.jpg" alt="novia2" />
+        <img src="./img/fiesta3.jpg" alt="novia3" />
         <br>
-        <img src="/img/fiesta4.jpg" alt="novia4" />
-        <img src="/img/fiesta5.jpg" alt="novia5" />
-        <img src="/img/fiesta6.jpg" alt="novia5" />
+        <img src="./img/fiesta4.jpg" alt="novia4" />
+        <img src="./img/fiesta5.jpg" alt="novia5" />
+        <img src="./img/fiesta6.jpg" alt="novia5" />
         </section>
         <div>
             <h2>Vestidos de fiesta RGZ Alta Moda: para eventos de día y de noche</h2>
@@ -54,9 +54,9 @@
         <section>
             <table border="1" cellpadding="20" cellspacing="10">
                 <tr>
-                    <th><img src="/img/corto1.jpg" alt=""></th>
-                    <th><img src="/img/largo1.jpg" alt=""></th>
-                    <th><img src="/img/mono1.jpg" alt=""></th>
+                    <th><img src="./img/corto1.jpg" alt=""></th>
+                    <th><img src="./img/largo1.jpg" alt=""></th>
+                    <th><img src="./img/mono1.jpg" alt=""></th>
                 </tr>
                 <tr>
                     <td>Vestidos de fiesta cortos</td>
@@ -72,9 +72,15 @@
                         siendo más habitual en la mayoría de las culturas escogerlos para ocasiones que tengan lugar
                         durante la tarde y en adelante. Y siempre serán los más indicados para los eventos de alto nivel
                         ceremonial.</td>
-                    <td>Igualmente, los vestidos de cóctel y los monos de fiesta podrán llevarse tanto de día como de
-                        noche, en eventos que requieran cierta etiqueta. No obstante, no dejará de ser significativo que
-                        sean glamurosos y estén hechos con géneros de calidad, como todos los modelos de RGZ Alta moda.
+                    <td>
+                        <ol>
+                            <li>Los vestidos de cóctel y los monos de fiesta podrán llevarse tanto de día como de
+                                noche, en eventos que requieran cierta etiqueta.
+                            </li>
+                            <li>No obstante, no dejará de ser significativo que
+                                sean glamurosos y estén hechos con géneros de calidad, como todos los modelos de RGZ Alta moda.
+                            </li>
+                        </ol> 
                     </td>
                 </tr>
                 </tr>
