--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>RGZAltamoda</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -14,13 +14,13 @@
     <img src="img/log.png" alt="" />
     <nav class="menu">
       <ul>
-        <li><a href="/">inicio</a></li>
-        <li><a href="/novias.html">novias</a></li>
-        <li><a href="/madrinas.html">madrinas</a></li>
-        <li><a href="/fiesta.html">fiesta</a></li>
-        <li><a href="contacto.html">contacto</a></li>
+        <li><a href="./index.html">inicio</a></li>
+        <li><a href="./novias.html">novias</a></li>
+        <li><a href="./madrinas.html">madrinas</a></li>
+        <li><a href="./fiesta.html">fiesta</a></li>
+        <li><a href="./contacto.html">contacto</a></li>
       </ul>
-      <a href="https://api.whatsapp.com/send?phone=+5493516066789"><img src="/img/logos/WhatsApp_Logo_1.png"
+      <a href="https://api.whatsapp.com/send?phone=+5493516066789"><img src="./img/logos/WhatsApp_Logo_1.png"
           alt="Contactanos"></a>
     </nav>
   </header>
@@ -28,7 +28,7 @@
     <h1>RGZ Alta Moda</h1>
   </section>
   <section>
-    <img src="/img/casa.jpg" alt="" width="960" />
+    <img src="./img/casa.jpg" alt="" width="960" />
     <div class="desafio1">
       <p>Hola! Que lindo que hayas llegado hasta acá. Me presento... Soy Romina Zanetti Gusman. Nací y crecí entre hilos y costuras. Mamá modista y trabajadora de mercería y abuela muy aficionada a remodelar y coser. 
         Siempre me gustó éste mundo pero jamás pensé en dedicarme a él. Pasando por otra carrera antes, hoy soy Diseñadora de Indumentaria y Textil y soy muy felíz!! 
@@ -40,9 +40,7 @@
     <img src="" alt="" />
   </section>
   <section>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/HREGmQ0ZWjY" title="YouTube video player"
-    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-    allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Dy4K8kFH-Nc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </section>
   <footer class="piedepagina">
     <a href=""><img src="" alt="instagram"></a>
