--- a/madrinas.html
+++ b/madrinas.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Madrinas</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
@@ -14,13 +14,13 @@
         <img src="img/log.png" alt="" />
         <nav class="menu">
             <ul>
-                <li><a href="/">inicio</a></li>
-                <li><a href="novias.html">novias</a></li>
-                <li><a href="madrinas.html">madrinas</a></li>
-                <li><a href="fiesta.html">fiesta</a></li>
-                <li><a href="contacto.html">contacto</a></li>
+                <li><a href="./index.html">inicio</a></li>
+                <li><a href="./novias.html">novias</a></li>
+                <li><a href="./madrinas.html">madrinas</a></li>
+                <li><a href="./fiesta.html">fiesta</a></li>
+                <li><a href="./contacto.html">contacto</a></li>
             </ul>
-            <a href="https://api.whatsapp.com/send?phone=+5493516066789"><img src="/img/logos/WhatsApp_Logo_1.png"
+            <a href="https://api.whatsapp.com/send?phone=+5493516066789"><img src="./img/logos/WhatsApp_Logo_1.png"
                     alt="Contactanos" />
             </a>
         </nav>
@@ -37,13 +37,13 @@
             </div>
         </section>
         <section>
-            <img src="/img/madrina1.jpg" alt="novia1" />
-            <img src="/img/madrina2.jpg" alt="novia2" />
-            <img src="/img/madrina3.jpg" alt="novia3" />
+            <img src="./img/madrina1.jpg" alt="madrina1" />
+            <img src="./img/madrina2.jpg" alt="madrina2" />
+            <img src="./img/madrina3.jpg" alt="madrina3" />
             <br />
-            <img src="/img/madrina4.jpg" alt="novia4" />
-            <img src="/img/madrina5.jpg" alt="novia5" />
-            <img src="/img/madrina6.jpg" alt="novia6" />
+            <img src="./img/madrina4.jpg" alt="madrina4" />
+            <img src="./img/madrina5.jpg" alt="madrina5" />
+            <img src="./img/madrina6.jpg" alt="madrina6" />
         </section>
     </main>
     <footer class="piedepagina">
