--- a/novias.html
+++ b/novias.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Novias</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -14,13 +14,13 @@
         <img src="img/log.png" alt="" />
         <nav class="menu">
             <ul>
-                <li><a href="/">Inicio</a></li>
-                <li><a href="novias.html">novias</a></li>
-                <li><a href="/madrinas.html">madrinas</a></li>
-                <li><a href="/fiesta.html">fiesta</a></li>
-                <li><a href="contacto.html">contacto</a></li>
+                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="./novias.html">novias</a></li>
+                <li><a href="./madrinas.html">madrinas</a></li>
+                <li><a href="./fiesta.html">fiesta</a></li>
+                <li><a href="./contacto.html">contacto</a></li>
             </ul>
-            <a href="https://api.whatsapp.com/send?phone=+5493516066789"><img src="/img/logos/WhatsApp_Logo_1.png"
+            <a href="https://api.whatsapp.com/send?phone=+5493516066789"><img src="./img/logos/WhatsApp_Logo_1.png"
                     alt="Contactanos"></a>
     </header>
     <main>
@@ -31,15 +31,15 @@
                     que encuentres tu modelo perfecto.</p>
             </div>
             <div>
-                <img src="/img/novia1.jpg" alt="novia1" />
-                <img src="/img/novia2.jpg" alt="novia2" />
-                <img src="/img/novia3.jpg" alt="novia3" />
+                <img src="./img/novia1.jpg" alt="novia1" />
+                <img src="./img/novia2.jpg" alt="novia2" />
+                <img src="./img/novia3.jpg" alt="novia3" />
                 <br />
             </div>
             <div>
-                <img src="/img/novia4.jpg" alt="novia4" />
-                <img src="/img/novia5.jpg" alt="novia5" />
-                <img src="/img/novia6.jpg" alt="novia6" />
+                <img src="./img/novia4.jpg" alt="novia4" />
+                <img src="./img/novia5.jpg" alt="novia5" />
+                <img src="./img/novia6.jpg" alt="novia6" />
             </div>
             <p>Encontrar el vestido que te acompañe en uno de los días más importantes de tu vida es su especialidad.
                 Rgz Alta moda pone todo su talento y dedicación para diseñar los vestidos de novias
