--- a/contacto.html
+++ b/contacto.html
@@ -14,11 +14,11 @@
     <img src="img/log.png" alt="" />
     <nav class="menu">
       <ul>
-        <li><a href="/">inicio</a></li>
-        <li><a href="/novias.html">novias</a></li>
-        <li><a href="/madrinas.html">madrinas</a></li>
-        <li><a href="/fiesta.html">fiesta</a></li>
-        <li><a href="contacto.html">contacto</a></li>
+        <li><a href="./index.html">inicio</a></li>
+        <li><a href="./novias.html">novias</a></li>
+        <li><a href="./madrinas.html">madrinas</a></li>
+        <li><a href="./fiesta.html">fiesta</a></li>
+        <li><a href="./contacto.html">contacto</a></li>
       </ul>
       <a href="https://api.whatsapp.com/send?phone=+5493516066789"><img src="/img/logos/WhatsApp_Logo_1.png"
           alt="Contactanos"></a>
@@ -54,6 +54,7 @@
       </fieldset>
     </form>
   </section>
+  <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=juan%20g%20posse%20y%20caraffa&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net">custom google maps for website</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
   <footer class="piedepagina">
     <a href=""><img src="" alt="instagram"></a>
     <a href=""><img src="" alt="Facebook"></a>
