--- a/fiesta.html
+++ b/fiesta.html
@@ -5,24 +5,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Novias</title>
+    <title>RGZAltamoda</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <header>
-        <img src="img/log.png" alt="" />
-        <nav class="menu">
-            <ul>
-                <li><a href="./index.html">inicio</a></li>
-                <li><a href="./novias.html">novias</a></li>
-                <li><a href="./madrinas.html">madrinas</a></li>
-                <li><a href="./fiesta.html">fiesta</a></li>
-                <li><a href="./contacto.html">contacto</a></li>
-            </ul>
-            <a href="https://api.whatsapp.com/send?phone=+5493516066789"><img src="./img/logos/WhatsApp_Logo_1.png"
-                    alt="Contactanos"></a>
-        </nav>
+    <header class="header">
+        <div class="header__logo">
+            <img src="img/LogoMakr-0WdLz5.png" alt="" />
+        </div>
+        <div class="header__contactanos">
+            <a href="https://api.whatsapp.com/send?phone=+5493516066789" class="btn-wsp"><i class="fab fa-whatsapp"></i></a>
+        </div>
+        <div>
+            <nav class="header__menu">
+                <ul>
+                    <li><a href="./index.html">inicio</a></li>
+                    <li><a href="./novias.html">novias</a></li>
+                    <li><a href="./madrinas.html">madrinas</a></li>
+                    <li><a href="./fiesta.html">fiesta</a></li>
+                    <li><a href="./contacto.html">contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <section>
@@ -73,24 +82,21 @@
                         durante la tarde y en adelante. Y siempre serán los más indicados para los eventos de alto nivel
                         ceremonial.</td>
                     <td>
-                        <ol>
-                            <li>Los vestidos de cóctel y los monos de fiesta podrán llevarse tanto de día como de
-                                noche, en eventos que requieran cierta etiqueta.
-                            </li>
-                            <li>No obstante, no dejará de ser significativo que
-                                sean glamurosos y estén hechos con géneros de calidad, como todos los modelos de RGZ Alta moda.
-                            </li>
-                        </ol> 
+                        Los vestidos de cóctel y los monos de fiesta podrán llevarse tanto de día como de
+                        noche, en eventos que requieran cierta etiqueta.
+                        No obstante, no dejará de ser significativo que
+                        sean glamurosos y estén hechos con géneros de calidad, como todos los modelos de RGZ
+                        Alta moda.
                     </td>
                 </tr>
                 </tr>
             </table>
         </section>
     </main>
-    <footer class="piedepagina">
-        <a href=""><img src="" alt="instagram" /></a>
-        <a href=""><img src="" alt="Facebook" /></a>
-        <a href=""><img src="" alt="twitter" /></a>
+    <footer class="">
+        <a href=""><i class="fab fa-facebook-square"></i></a>
+        <a href=""><i class="fab fa-instagram-square"></i></a>
+        <a href=""><i class="fab fa-twitter-square"></i></a>
         © Copyright 2021 RGZAltamoda | Creada por HermannZanetti
     </footer>
 </body>
