--- a/novias.html
+++ b/novias.html
@@ -1,42 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Novias</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>RGZAltamoda</title>
+        <link rel="stylesheet" href="./style.css">
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+            integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+          />
+          <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+      </head>
 
 <body>
-    <header>
-        <img src="img/log.png" alt="" />
-        <nav class="menu">
-            <ul>
-                <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./novias.html">novias</a></li>
-                <li><a href="./madrinas.html">madrinas</a></li>
-                <li><a href="./fiesta.html">fiesta</a></li>
-                <li><a href="./contacto.html">contacto</a></li>
-            </ul>
-            <a href="https://api.whatsapp.com/send?phone=+5493516066789"><img src="./img/logos/WhatsApp_Logo_1.png"
-                    alt="Contactanos"></a>
-    </header>
+  <header class="header">
+    <div class="header__logo">
+      <img src="img/LogoMakr-0WdLz5.png" alt="" />
+    </div>
+    <div class="header__contactanos">
+      <a href="https://api.whatsapp.com/send?phone=+5493516066789" class="btn-wsp"><i class="fab fa-whatsapp"></i></a>
+    </div>
+    <div>
+      <nav class="header__menu">
+        <ul>
+          <li><a href="./index.html">inicio</a></li>
+          <li><a href="./novias.html">novias</a></li>
+          <li><a href="./madrinas.html">madrinas</a></li>
+          <li><a href="./fiesta.html">fiesta</a></li>
+          <li><a href="./contacto.html">contacto</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
     <main>
-        <section>
+        <section class="principal">
             <div>
-                <p>Conscientes de lo importante que es para toda novia lucir de blanco más única que nunca el día de su
+                <p class="principal__texto1">Conscientes de lo importante que es para toda novia lucir de blanco más única que nunca el día de su
                     boda, en RGZ Alta moda ofrecemos una amplia variedad de vestidos de novia de diferentes estilos para
                     que encuentres tu modelo perfecto.</p>
             </div>
-            <div>
+            <div class="principal__imagenes">
                 <img src="./img/novia1.jpg" alt="novia1" />
                 <img src="./img/novia2.jpg" alt="novia2" />
                 <img src="./img/novia3.jpg" alt="novia3" />
                 <br />
             </div>
-            <div>
+            <div class="principal__imagenes2">
                 <img src="./img/novia4.jpg" alt="novia4" />
                 <img src="./img/novia5.jpg" alt="novia5" />
                 <img src="./img/novia6.jpg" alt="novia6" />
@@ -49,12 +63,12 @@
                 en continuo movimiento buscando siempre nuevas ideas para sorprender a sus novias.</p>
         </section>
     </main>
-    <footer class="piedepagina">
-        <a href=""><img src="" alt="instagram" /></a>
-        <a href=""><img src="" alt="Facebook" /></a>
-        <a href=""><img src="" alt="twitter" /></a>
+    <footer class="">
+        <a href=""><i class="fab fa-facebook-square"></i></a>
+        <a href=""><i class="fab fa-instagram-square"></i></a>
+        <a href=""><i class="fab fa-twitter-square"></i></a>
         © Copyright 2021 RGZAltamoda | Creada por HermannZanetti
-    </footer>
+      </footer>
 </body>
 
 </html>
