--- a/index.html
+++ b/index.html
@@ -7,45 +7,57 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>RGZAltamoda</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <header>
-    <img src="img/log.png" alt="" />
-    <nav class="menu">
-      <ul>
-        <li><a href="./index.html">inicio</a></li>
-        <li><a href="./novias.html">novias</a></li>
-        <li><a href="./madrinas.html">madrinas</a></li>
-        <li><a href="./fiesta.html">fiesta</a></li>
-        <li><a href="./contacto.html">contacto</a></li>
-      </ul>
-      <a href="https://api.whatsapp.com/send?phone=+5493516066789"><img src="./img/logos/WhatsApp_Logo_1.png"
-          alt="Contactanos"></a>
-    </nav>
+  <header class="header">
+    <div class="header__logo">
+      <img src="img/LogoMakr-0WdLz5.png" alt="" />
+    </div>
+    <div class="header__contactanos">
+      <a href="https://api.whatsapp.com/send?phone=+5493516066789" class="btn-wsp"><i class="fab fa-whatsapp"></i></a>
+    </div>
+    <div>
+      <nav class="header__menu">
+        <ul>
+          <li><a href="./index.html">inicio</a></li>
+          <li><a href="./novias.html">novias</a></li>
+          <li><a href="./madrinas.html">madrinas</a></li>
+          <li><a href="./fiesta.html">fiesta</a></li>
+          <li><a href="./contacto.html">contacto</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
-  <section>
-    <h1>RGZ Alta Moda</h1>
-  </section>
-  <section>
-    <img src="./img/casa.jpg" alt="" width="960" />
-    <div class="desafio1">
-      <p>Hola! Que lindo que hayas llegado hasta acá. Me presento... Soy Romina Zanetti Gusman. Nací y crecí entre hilos y costuras. Mamá modista y trabajadora de mercería y abuela muy aficionada a remodelar y coser. 
-        Siempre me gustó éste mundo pero jamás pensé en dedicarme a él. Pasando por otra carrera antes, hoy soy Diseñadora de Indumentaria y Textil y soy muy felíz!! 
-        Te invito a que hagamos algo juntas/os. Algo bello, único y eterno. Y que disfrutemos de este viaje hermoso que es crear algo a medida, para tu ocasión especial.
+  <section class="principal">
+    <img class="principal__img" src="./img/casa1.jpg" alt="" width="960"/>
+    <div class="principal__texto1">
+      <p>Hola! Que lindo que hayas llegado hasta acá. Me presento... Soy Romina Zanetti Gusman. Nací y crecí entre hilos
+        y costuras. Mamá modista y trabajadora de mercería y abuela muy aficionada a remodelar y coser.
+        Siempre me gustó éste mundo pero jamás pensé en dedicarme a él. Pasando por otra carrera antes, hoy soy
+        Diseñadora de Indumentaria y Textil y soy muy felíz!!
+        Te invito a que hagamos algo juntas/os. Algo bello, único y eterno. Y que disfrutemos de este viaje hermoso que
+        es crear algo a medida, para tu ocasión especial.
       </p>
     </div>
-    <h2>Vestidos 2021</h2>
-    <p>Te compartimos los vestidos de novias más impresionantes de 2021</p>
-    <img src="" alt="" />
   </section>
   <section>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/Dy4K8kFH-Nc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="texto2">
+      <h2>Vestidos 2021</h2>
+      <p>Te compartimos los vestidos de novias más impresionantes de 2021</p>
+    </div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Dy4K8kFH-Nc" title="YouTube video player"
+      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
   </section>
-  <footer class="piedepagina">
-    <a href=""><img src="" alt="instagram"></a>
-    <a href=""><img src="" alt="Facebook"></a>
-    <a href=""><img src="" alt="twitter"></a>
+  <footer class="">
+    <a href=""><i class="fab fa-facebook-square"></i></a>
+    <a href=""><i class="fab fa-instagram-square"></i></a>
+    <a href=""><i class="fab fa-twitter-square"></i></a>
     © Copyright 2021 RGZAltamoda | Creada por HermannZanetti
   </footer>
 </body>
